Localize UI strings and expand English translations

--- a/Convertor/en.lproj/Localizable.strings
+++ b/Convertor/en.lproj/Localizable.strings
@@ -1,39 +1,71 @@
-"Audio Converter" = "Audio Converter";
-"Drag and drop your FLAC files here" = "Drag and drop your FLAC files here";
+"Media Converter" = "Media Converter";
+"Drag and drop your media files here" = "Drag and drop your media files here";
 "or click to select" = "or click to select";
-"No files to convert." = "No files to convert.";
-"Output Format" = "Output Format";
-"Clear List" = "Clear List";
-"Convert All" = "Convert All";
+"No media to convert." = "No media to convert.";
+"File selection error: " = "File selection error: ";
 "Pending" = "Pending";
 "Converting..." = "Converting...";
 "Completed" = "Completed";
 "Failed" = "Failed";
-"File selection error: " = "File selection error: ";
-"Non-FLAC file ignored: " = "Non-FLAC file ignored: ";
-"Conversion error for " = "Conversion error for ";
-"FFmpeg executable not found." = "FFmpeg executable not found.";
-"FFmpeg executable is not executable." = "FFmpeg executable is not executable.";
-"Input file does not exist." = "Input file does not exist.";
-"Input file is not readable." = "Input file is not readable.";
-"Cannot create output directory: " = "Cannot create output directory: ";
-"FFmpeg process failed with exit code %d:
-%@" = "FFmpeg process failed with exit code %d:
-%@";
-"Failed to start FFmpeg process: " = "Failed to start FFmpeg process: ";
-"Cancel All" = "Cancel All";
 "Cancelled" = "Cancelled";
+"Delete" = "Delete";
+"Settings" = "Settings";
+"Appearance" = "Appearance";
+"Dark Mode" = "Dark Mode";
+"Default Audio Settings" = "Default Audio Settings";
+"Audio Format" = "Audio Format";
+"Audio Quality" = "Audio Quality";
+"Default Video Settings" = "Default Video Settings";
+"Video Codec" = "Video Codec";
+"Video Quality" = "Video Quality";
+"Performance" = "Performance";
+"Maximum Concurrent Tasks: " = "Maximum Concurrent Tasks: ";
+"Output Directory" = "Output Directory";
+"Documents" = "Documents";
+"Downloads" = "Downloads";
+"Custom Folder" = "Custom Folder";
 "Low" = "Low";
 "Medium" = "Medium";
 "High" = "High";
 "Very High" = "Very High";
 "Lossless" = "Lossless";
-"Default Output Format" = "Default Output Format";
-"Audio Quality" = "Audio Quality";
-"Maximum Concurrent Tasks: %d" = "Maximum Concurrent Tasks: %d";
-"Output Directory" = "Output Directory";
-"Documents" = "Documents";
-"Select..." = "Select...";
-"Error selecting output directory: " = "Error selecting output directory: ";
+"AAC" = "AAC";
+"Apple Lossless" = "Apple Lossless";
+"MP4 (Video)" = "MP4 (Video)";
+"H.264" = "H.264";
+"H.265 (HEVC)" = "H.265 (HEVC)";
+"720p" = "720p";
+"1080p" = "1080p";
+"2160p (4K)" = "2160p (4K)";
+"Done" = "Done";
+"Settings for " = "Settings for ";
+"Output Format" = "Output Format";
+"Video Settings" = "Video Settings";
+"Codec" = "Codec";
+"Resolution" = "Resolution";
+"Quality" = "Quality";
+"Tracks" = "Tracks";
+"Audio Track" = "Audio Track";
+"Subtitle Track" = "Subtitle Track";
+"None" = "None";
+"Advanced" = "Advanced";
+"Video Bitrate (kbps)" = "Video Bitrate (kbps)";
+"Max File Size (MB)" = "Max File Size (MB)";
+"Audio Bitrate" = "Audio Bitrate";
+"Bitrate" = "Bitrate";
+"Output directory is not accessible. Please select a different directory in settings." = "Output directory is not accessible. Please select a different directory in settings.";
+"Could not parse media duration." = "Could not parse media duration.";
+"Cancel All" = "Cancel All";
+"Clear List" = "Clear List";
+"Convert All" = "Convert All";
+"FFmpeg executable not found." = "FFmpeg executable not found.";
+"FFmpeg executable is not executable." = "FFmpeg executable is not executable.";
+"Input file does not exist." = "Input file does not exist.";
+"Input file is not readable." = "Input file is not readable.";
+"Cannot create output directory: " = "Cannot create output directory: ";
+"FFmpeg process failed with exit code %d: \n%@" = "FFmpeg process failed with exit code %d: \n%@";
+"Failed to start FFmpeg process: " = "Failed to start FFmpeg process: ";
 "Conversion Completed" = "Conversion Completed";
 "%@ has been converted successfully." = "%@ has been converted successfully.";
+"Select..." = "Select...";
+"File name" = "File name";
